Fix spacing between card expenses.

--- a/AbarcaJBudgetApp2/css/style.css
+++ b/AbarcaJBudgetApp2/css/style.css
@@ -11,3 +11,6 @@ h1{
     color: white;
 }
 
+.card {
+    margin-bottom: 10px;
+}
